@startuml "DCI"
title Diagramme de classes – Implémentation (avec constructeurs)

package Utilisateurs {

    enum Role {
        ADMIN
        CLIENT
    }

    enum MoyenPaiement {
        CARTE
        PAYPAL
    }

    abstract class User {
        - idUser : int
        - nom : String
        - prenom : String
        - login : String
        - motDePasse : String
        - role : Role

        + User(idUser:int, nom:String, prenom:String, login:String, motDePasse:String, role:Role) : User
        + seConnecter(login : String, mdp : String) : boolean
        + seDeconnecter() : void
    }

    class Client {
        - adresse : String
        - moyensPaiement : List<MoyenPaiement>
        - panier : Panier
        - commandes : List<Commande>

        + Client(idUser:int, nom:String, prenom:String, login:String, motDePasse:String, adresse:String) : Client
        + ajouterAuPanier(p : Produit, qte : int) : void
        + passerCommande() : Commande
        + consulterCommandes() : List<Commande>
    }

    class Admin {
        + Admin(idUser:int, nom:String, prenom:String, login:String, motDePasse:String) : Admin
        + ajouterProduit(p : Produit) : void
        + modifierProduit(p : Produit) : void
        + supprimerProduit(p : Produit) : void
    }

    User <|-- Client
    User <|-- Admin
}

package Produits {

    class Produit {
        - idProduit : int
        - nom : String
        - prix : double
        - description : String
        - niveauPrestige : int
        - notationMoyenne : double
        - taille : String
        - quantiteRestante : int
        - avis : List<Avis>

        + Produit(idProduit:int, nom:String, prix:double, description:String, niveauPrestige:int, taille:String, quantiteRestante:int) : Produit
        + mettreAJourStock(qte : int) : void
        + calculerNotationMoyenne() : double
    }

    class Avis {
        - idAvis : int
        - titre : String
        - contenu : String
        - date : Date
        - auteur : User

        + Avis(idAvis:int, titre:String, contenu:String, date:Date, auteur:User) : Avis
        + publier() : void
    }

    class Catalogue {
        - idCatalogue : int
        - nom : String
        - produits : List<Produit>

        + Catalogue(idCatalogue:int, nom:String) : Catalogue
        + ajouterProduit(p : Produit) : void
        + supprimerProduit(p : Produit) : void
        + rechercherProduit(nom : String) : List<Produit>
    }

    Catalogue "1" o-- "*" Produit
    Produit "1" o-- "*" Avis
    User "1" --> "*" Avis : rédige
}

package Commandes {

    class Panier {
        - idPanier : int
        - lignes : List<LignePanier>

        + Panier(idPanier:int) : Panier
        + ajouterLigne(p : Produit, qte : int) : void
        + supprimerLigne(p : Produit) : void
        + calculerTotal() : double
        + vider() : void
    }

    class LignePanier {
        - produit : Produit
        - quantite : int

        + LignePanier(produit:Produit, quantite:int) : LignePanier
        + calculerSousTotal() : double
    }

    class Commande {
        - idCommande : int
        - date : Date
        - statut : StatutCommande
        - lignes : List<LigneCommande>
        - montantTotal : double

        + Commande(idCommande:int, date:Date, statut:StatutCommande) : Commande
        + calculerTotal() : double
        + changerStatut(statut : StatutCommande) : void
    }

    class LigneCommande {
        - produit : Produit
        - quantite : int
        - prixUnitaire : double

        + LigneCommande(produit:Produit, quantite:int, prixUnitaire:double) : LigneCommande
        + calculerSousTotal() : double
    }

    enum StatutCommande {
        EN_COURS
        PAYEE
        EXPEDIEE
        ANNULEE
    }

    Panier "1" *-- "*" LignePanier
    Commande "1" *-- "*" LigneCommande
}

Client "1" --> "1" Panier
Client "1" --> "*" Commande

@enduml
